kubernetes/istio/virtual-service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: myweb-vs
spec:
  hosts:
    - 'app.admin.com'
  gateways:
    - myweb-gateway
  http:
    - route:
        - destination:
            host: admin
            port:
              number: 3000
